--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light py-5">
+        <nav class="navbar navbar-expand-lg py-5">
             <div class="container-fluid">
                 <h1 class="me-5">Japanese Course</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -95,6 +95,16 @@
                     </button>
                 </div>
         </section>
+
+        <div class="card text-center mt-5 border border-0">
+            <div class="card-body">
+                <h1>Discover Our Popular <br> Courses</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                    when
+                    looking at its layout.</p>
+            </div>
+        </div>
+
     </header>
 
 
