Success student list end

--- a/index.html
+++ b/index.html
@@ -104,8 +104,169 @@
                     looking at its layout.</p>
             </div>
         </div>
-
     </header>
+
+    <!-- end the header -->
+
+    <section class="container">
+        <div class="row">
+            <div class="my-2 d-flex">
+                <div class="col-6">
+                    <div class="d-flex border border-1">
+                        <div>
+                            <img class="" src="images/course/japan-1.jpg" alt="">
+                        </div>
+                        <div class="px-3 pt-4">
+                            <h5 class="fw-bold">Japanese Language Full Course</h5>
+                            <p>Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
+                                learn how to structure them in sentences</p>
+                            <h5 class="text-primary">Price : 500$</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="d-flex border border-1">
+                        <div>
+                            <img class="" src="images/course/japan-2.jpg" alt="">
+                        </div>
+                        <div class="px-3 pt-4">
+                            <h5 class="fw-bold">Japanese Language 3month Course</h5>
+                            <p>Some quick example text to build on the card title and make up the bulk of the card</p>
+                            <h5 class="text-primary">Price : 400$</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="my-2 d-flex">
+                <div class="col-6">
+                    <div class="d-flex border border-1">
+                        <div>
+                            <img class="" src="images/course/japan-3.jpg" alt="">
+                        </div>
+                        <div class="px-3 pt-4">
+                            <h5 class="fw-bold">Japanese Language Kanji Course</h5>
+                            <p>Japanese syntax also has remained relatively stable, maintaining its characteristic
+                                subject object verb (SOV) sentence structure.</p>
+                            <h5 class="text-primary">Price : 300$</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="d-flex border border-1">
+                        <div>
+                            <img class="" src="images/course/japan-4.jpg" alt="">
+                        </div>
+                        <div class="px-3 pt-4">
+                            <h5 class="fw-bold">Japanese Language Hiragana Course</h5>
+                            <p>Through the centuries, Japanese grammatical structure has remained remarkably stable, to
+                                the degree that with some basic training.</p>
+                            <h5 class="text-primary">Price : 200$</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="my-2 d-flex">
+                <div class="col-6">
+                    <div class="d-flex border border-1">
+                        <div>
+                            <img class="" src="images/course/japan-5.jpg" alt="">
+                        </div>
+                        <div class="px-3 pt-4">
+                            <h5 class="fw-bold">Japanese Language Katakana Course</h5>
+                            <p>The country’s geography, characterized by high mountain peaks and deep valleys as well as
+                                by small isolated islands </p>
+                            <h5 class="text-primary">Price : 100$</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="d-flex border border-1">
+                        <div>
+                            <img class="" src="images/course/japan-6.png" alt="">
+                        </div>
+                        <div class="px-3 pt-4">
+                            <h5 class="fw-bold">Japanese Language Food Course</h5>
+                            <p>An increasingly popular theory along that line posits that the mixed nature of Japanese
+                            </p>
+                            <h5 class="text-primary">Price : 1000$</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- end the Courses -->
+
+        <div class="d-flex justify-content-center my-2">
+            <button class="btn btn-info text-white fw-semibold px-5 py-2 mt-3 mb-5">Get Started</button>
+        </div>
+    </section>
+
+
+    <section class="container mb-5">
+        <div class="d-flex justify-content-around py-5 bg-info rounded-2">
+            <div>
+                <div class="text-white">
+                    <h1 class="mt-5">Ready to join?</h1>
+                    <p>It is a long established fact that a reader will be distracted <br> by the readable content of a
+                        page
+                        when
+                        looking at its layout.</p>
+                </div>
+            </div>
+            <div>
+                <div class="pt-5">
+                    <button class="btn btn-info text-info fw-semibold px-5 py-3 mt-3 mb-5 bg-white">Get
+                        Started</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Register content end -->
+
+    <section class="container">
+        <h1 class="my-3">Meet Our Successfull Students</h1>
+        <p>It is a long established fact that a reader will be distracted by the <br>
+            readable content of a page when looking at its layout.</p>
+    </section>
+
+    <!-- end Meet Our Successfull Students -->
+
+    <div class="card-group">
+        <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+        </div>
+        <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+        </div>
+        <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+        </div>
+    </div>
 
 
 
