--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>Japanese Language edteach Website</title>
+    <script src="https://kit.fontawesome.com/267d24f0db.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -216,8 +217,7 @@
             </div>
             <div>
                 <div class="pt-5">
-                    <button class="btn btn-info text-info fw-semibold px-5 py-3 mt-3 mb-5 bg-white">Get
-                        Started</button>
+                    <button class="btn btn-info text-info fw-semibold px-5 py-3 mt-3 mb-5 bg-white">Get Started</button>
                 </div>
             </div>
         </div>
@@ -233,41 +233,186 @@
 
     <!-- end Meet Our Successfull Students -->
 
-    <div class="card-group">
-        <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
+    <section class="container d-flex">
+        <div class="card-group mx-2">
+            <div class="card">
+                <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Awlad Hossain</h5>
+                    <p class="card-text">UIUX Designer</p>
+                </div>
             </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
+
+        </div>
+        <div class="card-group mx-2">
+            <div class="card">
+                <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Jannatul Islam</h5>
+                    <p class="card-text">Motion Design</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="card-group mx-2">
+            <div class="card">
+                <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Imran Hossain</h5>
+                    <p class="card-text">Graphic Designer</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="card-group mx-2">
+            <div class="card">
+                <img src="images/student/student-4.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Nishi Akter</h5>
+                    <p class="card-text">Web Developer</p>
+                </div>
             </div>
         </div>
-        <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
-        </div>
-        <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This card has even longer content than the first to show that equal height action.</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
+    </section>
+
+    <div class="container my-4">
+        <div class="d-flex justify-content-center my-3">
+            <button class="btn btn-info text-white fw-bold px-5 py-2 mt-3 mb-5">View All</button>
         </div>
     </div>
 
+    <!-- start Frequently Asked Questions -->
+    <section style="width: 70%; margin: 0 auto;">
+        <div class="d-flex justify-content-center">
+            <div>
+                <div style="text-align: center;">
+                    <h1>Frequently Asked Questions</h1>
+                    <p class="my-4">It is a long established fact that a reader will be distracted by the readable
+                        <br>content of a
+                        page when looking at its layout.
+                    </p>
+                </div>
+
+                <!-- according section start -->
+
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                What is the difference between flexbox and grid?
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>Grid is made for two-dimensional layout while Flexbox is for one</strong> This
+                                means
+                                Flexbox can work on either row or columns at a time, but Grids can work on both.
+                                Flexbox,
+                                gives
+                                you more flexibility while working on either element (row or column). HTML markup and
+                                CSS
+                                will
+                                be easy to manage in this type of scenario
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                What is the difference between bootstrap and tailwind?
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>Bootstrap comes with a set of pre-styled responsive,</strong> mobile-first
+                                components
+                                that possess a definite UI kit. Tailwind CSS uses a set of utility classes to create a
+                                neat
+                                UI
+                                with more flexibility and uniqueness. Sites created using Bootstrap follow the generic
+                                pattern
+                                that makes them look identical
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                What is the css box model?
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>The Box Model,</strong> A box in CSS consists of a content area, which is where
+                                any
+                                text, images, or other HTML elements are displayed. This is optionally surrounded by
+                                padding, a
+                                border, and a margin, on one or more sides. The box model describes how these elements
+                                work
+                                together to create a box as displayed by CSS
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                What are semantic tags?
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                The HTML semantics refers to the
+                                <strong>tags that provide meaning to an HTML page rather than just
+                                    presentation.</strong> It
+                                makes HTML more comprehensible by better defining the different sections and layout of
+                                web
+                                pages
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Payment content logo  -->
+
+    <section class="container my-5">
+        <h1 style="text-align: center;">Trusted by over 800+ companies</h1>
+        <div class="row my-5">
+            <div class="col"><img src="images/company/company-1.png" alt=""></div>
+            <div class="col"><img src="images/company/company-2.png" alt=""></div>
+            <div class="col"><img src="images/company/company-3.png" alt=""></div>
+            <div class="col"><img src="images/company/company-4.png" alt=""></div>
+            <div class="col"><img src="images/company/company-5.png" alt=""></div>
+            <div class="col"><img src="images/company/company-6.png" alt=""></div>
+        </div>
+    </section>
+
+    <footer style="color: white; height: auto; width:auto; background-color:black; text-align: center;">
+        <div class="py-5">
+            <div class="pt-5">
+                <h1>Rangamati TTC</h1>
+                <p>Office 41, Zawaya Buildin, Ghala Muscat, <br> Sultanate of Oman <br> Privacy Ploicy | Terms of use
+                </p>
+            </div>
+            <div class="pb-5">
+                <i class="fa-brands fa-facebook mx-2"></i>
+                <i class="fa-brands fa-twitter mx-2"></i>
+                <i class="fa-brands fa-linkedin mx-2"></i>
+                <i class="fa-brands fa-tiktok mx-2"></i>
+            </div>
+
+        </div>
+    </footer>
 
 
 
