--- a/index.html
+++ b/index.html
@@ -110,91 +110,75 @@
 
     <!-- end the header -->
 
-    <section class="container">
+    <section class="container m-auto">
         <div class="row">
-            <div class="my-2 d-flex">
-                <div class="col-6">
-                    <div class="d-flex border border-1">
-                        <div>
-                            <img class="" src="images/course/japan-1.jpg" alt="">
-                        </div>
-                        <div class="px-3 pt-4">
-                            <h5 class="fw-bold">Japanese Language Full Course</h5>
-                            <p>Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
-                                learn how to structure them in sentences</p>
-                            <h5 class="text-primary">Price : 500$</h5>
-                        </div>
-                    </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 d-flex my-2 border rounded-2">
+                <div class="">
+                    <img class="" src="images/course/japan-1.jpg" alt="">
                 </div>
-                <div class="col-6">
-                    <div class="d-flex border border-1">
-                        <div>
-                            <img class="" src="images/course/japan-2.jpg" alt="">
-                        </div>
-                        <div class="px-3 pt-4">
-                            <h5 class="fw-bold">Japanese Language 3month Course</h5>
-                            <p>Some quick example text to build on the card title and make up the bulk of the card</p>
-                            <h5 class="text-primary">Price : 400$</h5>
-                        </div>
-                    </div>
+                <div class="px-3 pt-4">
+                    <h5 class="fw-bold">Japanese Language Full Course</h5>
+                    <p>Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
+                        learn how to structure them in sentences</p>
+                    <h5 class="text-primary">Price : 500$</h5>
                 </div>
             </div>
-            <div class="my-2 d-flex">
-                <div class="col-6">
-                    <div class="d-flex border border-1">
-                        <div>
-                            <img class="" src="images/course/japan-3.jpg" alt="">
-                        </div>
-                        <div class="px-3 pt-4">
-                            <h5 class="fw-bold">Japanese Language Kanji Course</h5>
-                            <p>Japanese syntax also has remained relatively stable, maintaining its characteristic
-                                subject object verb (SOV) sentence structure.</p>
-                            <h5 class="text-primary">Price : 300$</h5>
-                        </div>
-                    </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 d-flex my-2 border rounded-2">
+                <div>
+                    <img class="" src="images/course/japan-1.jpg" alt="">
                 </div>
-                <div class="col-6">
-                    <div class="d-flex border border-1">
-                        <div>
-                            <img class="" src="images/course/japan-4.jpg" alt="">
-                        </div>
-                        <div class="px-3 pt-4">
-                            <h5 class="fw-bold">Japanese Language Hiragana Course</h5>
-                            <p>Through the centuries, Japanese grammatical structure has remained remarkably stable, to
-                                the degree that with some basic training.</p>
-                            <h5 class="text-primary">Price : 200$</h5>
-                        </div>
-                    </div>
+                <div class="px-3 pt-4">
+                    <h5 class="fw-bold">Japanese Language Full Course</h5>
+                    <p>Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
+                        learn how to structure them in sentences</p>
+                    <h5 class="text-primary">Price : 500$</h5>
                 </div>
             </div>
-            <div class="my-2 d-flex">
-                <div class="col-6">
-                    <div class="d-flex border border-1">
-                        <div>
-                            <img class="" src="images/course/japan-5.jpg" alt="">
-                        </div>
-                        <div class="px-3 pt-4">
-                            <h5 class="fw-bold">Japanese Language Katakana Course</h5>
-                            <p>The country’s geography, characterized by high mountain peaks and deep valleys as well as
-                                by small isolated islands </p>
-                            <h5 class="text-primary">Price : 100$</h5>
-                        </div>
-                    </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 d-flex my-2 border rounded-2">
+                <div>
+                    <img class="" src="images/course/japan-1.jpg" alt="">
                 </div>
-                <div class="col-6">
-                    <div class="d-flex border border-1">
-                        <div>
-                            <img class="" src="images/course/japan-6.png" alt="">
-                        </div>
-                        <div class="px-3 pt-4">
-                            <h5 class="fw-bold">Japanese Language Food Course</h5>
-                            <p>An increasingly popular theory along that line posits that the mixed nature of Japanese
-                            </p>
-                            <h5 class="text-primary">Price : 1000$</h5>
-                        </div>
-                    </div>
+                <div class="px-3 pt-4">
+                    <h5 class="fw-bold">Japanese Language Full Course</h5>
+                    <p>Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
+                        learn how to structure them in sentences</p>
+                    <h5 class="text-primary">Price : 500$</h5>
                 </div>
             </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 d-flex my-2 border rounded-2">
+                <div>
+                    <img class="" src="images/course/japan-1.jpg" alt="">
+                </div>
+                <div class="px-3 pt-4">
+                    <h5 class="fw-bold">Japanese Language Full Course</h5>
+                    <p>Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
+                        learn how to structure them in sentences</p>
+                    <h5 class="text-primary">Price : 500$</h5>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 d-flex my-2 border rounded-2">
+                <div>
+                    <img class="" src="images/course/japan-1.jpg" alt="">
+                </div>
+                <div class="px-3 pt-4">
+                    <h5 class="fw-bold">Japanese Language Full Course</h5>
+                    <p>Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
+                        learn how to structure them in sentences</p>
+                    <h5 class="text-primary">Price : 500$</h5>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 d-flex my-2 border rounded-2">
+                <div>
+                    <img class="" src="images/course/japan-1.jpg" alt="">
+                </div>
+                <div class="px-3 pt-4">
+                    <h5 class="fw-bold">Japanese Language Full Course</h5>
+                    <p>Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
+                        learn how to structure them in sentences</p>
+                    <h5 class="text-primary">Price : 500$</h5>
+                </div>
+            </div>
+
         </div>
 
         <!-- end the Courses -->
