--- a/index.html
+++ b/index.html
@@ -189,24 +189,22 @@
     </section>
 
 
-    <section class="container mb-5">
-        <div class="d-flex justify-content-around py-5 bg-info rounded-2">
-            <div>
-                <div class="text-white">
-                    <h1 class="mt-5">Ready to join?</h1>
-                    <p>It is a long established fact that a reader will be distracted <br> by the readable content of a
-                        page
-                        when
-                        looking at its layout.</p>
-                </div>
+    <section class="container bg-info rounded-2">
+        <div class="row py-5">
+            <div class="text-white px-5 col-lg-8">
+                <h1 class="mt-5 ">Ready to join?</h1>
+                <p>It is a long established fact that a reader will be distracted by the <br> readable content of a
+                    page
+                    when
+                    looking at its layout.</p>
             </div>
-            <div>
-                <div class="pt-5">
-                    <button class="btn btn-info text-info fw-semibold px-5 py-3 mt-3 mb-5 bg-white">Get Started</button>
-                </div>
+            <div class="pt-5 col-lg-4">
+                <button class="btn btn-info text-info fw-semibold px-5 py-3 mt-3 mb-5 bg-white ">Get
+                    Started</button>
             </div>
         </div>
     </section>
+
 
     <!-- Register content end -->
 
