finaly finashed this job

--- a/index.html
+++ b/index.html
@@ -98,98 +98,117 @@
                 </div>
         </section>
 
-        <div class="card text-center mt-5 border border-0">
-            <div class="card-body">
+    </header>
+
+    <!-- end the header -->
+
+    <!-- Our courses section Start -->
+    <main>
+        <div class="container">
+            <div class="text-center py-5">
                 <h1>Discover Our Popular <br> Courses</h1>
                 <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
                     when
                     looking at its layout.</p>
             </div>
+            <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 g-4">
+                <div class="col">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4">
+                                <img class="" src="images/course/japan-1.jpg" class="card-img-top" alt="">
+                            </div>
+                            <div class="card-body col-lg-8 col-md-8 px-5">
+                                <h5 class="card-title">Japanese Language Full Course</h5>
+                                <p class="card-text">Whether you're a beginner starting with the basics or looking to
+                                    practice your reading, writing</p>
+                                <h6 class="text-info">Price : $1200</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4">
+                                <img class="" src="images/course/japan-2.jpg" class="card-img-top" alt="">
+                            </div>
+                            <div class="card-body col-lg-8 col-md-8 px-5">
+                                <h5 class="card-title">Japanese Language kanji Course</h5>
+                                <p class="card-text">Chinese is written entirely in hanzi. Japanese makes use of kanji
+                                    (mostly similar to hanzi), but also has two syllabaries of its own: hiragana and</p>
+                                <h6 class="text-info">Price : $1000</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4">
+                                <img class="" src="images/course/japan-3.jpg" class="card-img-top" alt="">
+                            </div>
+                            <div class="card-body col-lg-8 col-md-8 px-5">
+                                <h5 class="card-title">Hiragana Katakana full Course</h5>
+                                <p class="card-text">Now finally move on and try to write as many Japanese words as you
+                                    know in hiragana.</p>
+                                <h6 class="text-info">Price : $300</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4">
+                                <img class="" src="images/course/japan-4.jpg" class="card-img-top" alt="">
+                            </div>
+                            <div class="card-body col-lg-8 col-md-8 px-5">
+                                <h5 class="card-title">Japanese Language short Course</h5>
+                                <p class="card-text">How Long Does it Take to Learn Japanese on Average? With consistent
+                                    studying and speaking</p>
+                                <h6 class="text-info">Price : $200</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4">
+                                <img class="" src="images/course/japan-5.jpg" class="card-img-top" alt="">
+                            </div>
+                            <div class="card-body col-lg-8 col-md-8 px-5">
+                                <h5 class="card-title">JLPT Full Course</h5>
+                                <p class="card-text">JLPT Level 2 (N2): about 1400 to 2000 hours of recommended study.
+                                    JLPT Level 1 (N1): about 3100 to 4500 hours of recommended study.</p>
+                                <h6 class="text-info">Price : $800</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4">
+                                <img class="" src="images/course/japan-6.png" class="card-img-top" alt="">
+                            </div>
+                            <div class="card-body col-lg-8 col-md-8 px-5">
+                                <h5 class="card-title">NAT-test Full Course</h5>
+                                <p class="card-text">Scoring more than 25% on each individual section. 2) Achieving an
+                                    overall score that exceeds the passing score for the exam</p>
+                                <h6 class="text-info">Price : $800</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
-    </header>
+    </main>
+    <!-- Our courses section Start -->
 
-    <!-- end the header -->
-
-    <section class="container m-auto">
-        <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-12 d-flex my-2 border rounded-2">
-                <div class="">
-                    <img class="" src="images/course/japan-1.jpg" alt="">
-                </div>
-                <div class="px-3 pt-4">
-                    <h5 class="fw-bold">Japanese Language Full Course</h5>
-                    <p>Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
-                        learn how to structure them in sentences</p>
-                    <h5 class="text-primary">Price : 500$</h5>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-12 d-flex my-2 border rounded-2">
-                <div>
-                    <img class="" src="images/course/japan-1.jpg" alt="">
-                </div>
-                <div class="px-3 pt-4">
-                    <h5 class="fw-bold">Japanese Language Full Course</h5>
-                    <p>Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
-                        learn how to structure them in sentences</p>
-                    <h5 class="text-primary">Price : 500$</h5>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-12 d-flex my-2 border rounded-2">
-                <div>
-                    <img class="" src="images/course/japan-1.jpg" alt="">
-                </div>
-                <div class="px-3 pt-4">
-                    <h5 class="fw-bold">Japanese Language Full Course</h5>
-                    <p>Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
-                        learn how to structure them in sentences</p>
-                    <h5 class="text-primary">Price : 500$</h5>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-12 d-flex my-2 border rounded-2">
-                <div>
-                    <img class="" src="images/course/japan-1.jpg" alt="">
-                </div>
-                <div class="px-3 pt-4">
-                    <h5 class="fw-bold">Japanese Language Full Course</h5>
-                    <p>Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
-                        learn how to structure them in sentences</p>
-                    <h5 class="text-primary">Price : 500$</h5>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-12 d-flex my-2 border rounded-2">
-                <div>
-                    <img class="" src="images/course/japan-1.jpg" alt="">
-                </div>
-                <div class="px-3 pt-4">
-                    <h5 class="fw-bold">Japanese Language Full Course</h5>
-                    <p>Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
-                        learn how to structure them in sentences</p>
-                    <h5 class="text-primary">Price : 500$</h5>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-12 d-flex my-2 border rounded-2">
-                <div>
-                    <img class="" src="images/course/japan-1.jpg" alt="">
-                </div>
-                <div class="px-3 pt-4">
-                    <h5 class="fw-bold">Japanese Language Full Course</h5>
-                    <p>Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
-                        learn how to structure them in sentences</p>
-                    <h5 class="text-primary">Price : 500$</h5>
-                </div>
-            </div>
-
-        </div>
-
-        <!-- end the Courses -->
-
-        <div class="d-flex justify-content-center my-2">
-            <button class="btn btn-info text-white fw-semibold px-5 py-2 mt-3 mb-5">Get Started</button>
-        </div>
-    </section>
-
-
-    <section class="container bg-info rounded-2">
+    <section class="container bg-info rounded-2 mt-5">
         <div class="row py-5">
             <div class="text-white px-5 col-lg-8">
                 <h1 class="mt-5 ">Ready to join?</h1>
@@ -199,14 +218,40 @@
                     looking at its layout.</p>
             </div>
             <div class="pt-5 col-lg-4">
-                <button class="btn btn-info text-info fw-semibold px-5 py-3 mt-3 mb-5 bg-white ">Get
-                    Started</button>
+
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Register Now
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Our Courses</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Our Japanese app’s Grammar Review and Vocabulary Review ensure you memorise phrases and
+                                learn how to
+                                structure them in sentence
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
 
-    <!-- Register content end -->
+    <!-- modol content end -->
 
     <section class="container">
         <h1 class="my-3">Meet Our Successfull Students</h1>
@@ -216,45 +261,37 @@
 
     <!-- end Meet Our Successfull Students -->
 
-    <section class="container d-flex">
-        <div class="card-group mx-2">
-            <div class="card">
+    <section class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-3 border rounded-2">
                 <img src="images/student/student-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Awlad Hossain</h5>
-                    <p class="card-text">UIUX Designer</p>
+                    <h5 class="my-3">Awlad Hossain</h5>
+                    <p class="">UIUX Designer</p>
                 </div>
             </div>
-
-        </div>
-        <div class="card-group mx-2">
-            <div class="card">
+            <div class="col-sm-12 col-md-6 col-lg-3 border rounded-2">
                 <img src="images/student/student-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Jannatul Islam</h5>
-                    <p class="card-text">Motion Design</p>
+                    <h5 class="my-3">Jannatul Islam</h5>
+                    <p class="t">Motion Design</p>
                 </div>
             </div>
-
-        </div>
-        <div class="card-group mx-2">
-            <div class="card">
+            <div class="col-sm-12 col-md-6 col-lg-3 border rounded-2">
                 <img src="images/student/student-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Imran Hossain</h5>
-                    <p class="card-text">Graphic Designer</p>
+                    <h5 class="my-3">Imran Hossain</h5>
+                    <p class="">Graphic Designer</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3 border rounded-2">
+                <img src="images/student/student-4.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="my-3">Nishi Akter</h5>
+                    <p class="">Web Developer</p>
                 </div>
             </div>
 
-        </div>
-        <div class="card-group mx-2">
-            <div class="card">
-                <img src="images/student/student-4.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Nishi Akter</h5>
-                    <p class="card-text">Web Developer</p>
-                </div>
-            </div>
         </div>
     </section>
 
@@ -368,7 +405,7 @@
 
     <!-- Payment content logo  -->
 
-    <section class="container my-5">
+    <section class="container my-5 d-none d-sm-block d-sm-none d-md-none d-lg-block">
         <h1 style="text-align: center;">Trusted by over 800+ companies</h1>
         <div class="row my-5">
             <div class="col"><img src="images/company/company-1.png" alt=""></div>
@@ -380,6 +417,7 @@
         </div>
     </section>
 
+    <!-- footer Started -->
     <footer style="color: white; height: auto; width:auto; background-color:black; text-align: center;">
         <div class="py-5">
             <div class="pt-5">
@@ -388,17 +426,14 @@
                 </p>
             </div>
             <div class="pb-5">
-                <i class="fa-brands fa-facebook mx-2"></i>
-                <i class="fa-brands fa-twitter mx-2"></i>
-                <i class="fa-brands fa-linkedin mx-2"></i>
-                <i class="fa-brands fa-tiktok mx-2"></i>
+                <a href="www.facebook.com"><i class="fa-brands fa-facebook mx-2"></i></a>
+                <a href="www.twitter.com"><i class="fa-brands fa-twitter mx-2"></i></a>
+                <a href="www.linkedin.com"><i class="fa-brands fa-linkedin mx-2"></i></a>
+                <a href="www.ticktock.com"><i class="fa-brands fa-tiktok mx-2"></i></a>
             </div>
 
         </div>
     </footer>
-
-
-
 
     <!-- bootstrap javascrift link -->
 
