carosol in font text hidden remve

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="images/cover/Japanese Class.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-md-block">
                             <h1 class="display-1 fw-semibold">Get Started Digital Learning</h1>
                             <p>Much about the roots of the Japanese language is unclear. Some link it to the Altaic
                                 language family, which includes Turkish, Mongolian and other languages, but it also
@@ -67,7 +67,7 @@
                     </div>
                     <div class="carousel-item active">
                         <img src="images/cover/japanese Language.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-md-block">
                             <h1 class="display-1 fw-semibold">Get Started Digital Learning</h1>
                             <p>Much about the roots of the Japanese language is unclear. Some link it to the Altaic
                                 language family, which includes Turkish, Mongolian and other languages, but it also
@@ -77,7 +77,7 @@
                     </div>
                     <div class="carousel-item active">
                         <img src="images/cover/Nihongo student.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-md-block">
                             <h1 class="display-1 fw-semibold">Get Started Digital Learning</h1>
                             <p>Much about the roots of the Japanese language is unclear. Some link it to the Altaic
                                 language family, which includes Turkish, Mongolian and other languages, but it also
